Several bug fixes + GamePanel updates